# nextflow-turret

./: .gitguardian.yml  .gitignore  .nextflow.log.1  .nextflow.log.2  .nextflow.log.3  .nextflow.log.4  .nextflow.log.5  .nextflow.log.6  .nextflow.log.7  .nextflow.log.8  .nextflow.log.9  README.md  pyproject.toml  turret.toml  turret.toml.example
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/nextflow_turret/: __init__.py  auth.py  config.py  handler_mixin.py  handlers.py  schema.py  state.py  utils.py
src/nextflow_turret.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nextflow_turret/db/: __init__.py  store.py
src/nextflow_turret/launcher/: __init__.py  launcher.py
src/nextflow_turret/server/: __init__.py  __main__.py  app.py  registry.py
src/nextflow_turret/server/templates/: base.html  config_editor.html  launch_detail.html  launch_form.html  launches.html  login.html  pipelines.html  run_detail.html  runs.html
tests/: conftest.py  test_auth.py  test_e2e.py  test_integration.py  test_schema.py  test_server.py  test_turret.py
