[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nextflow-turret"
version = "0.1.0"
description = "In-process Nextflow Tower API shim — accumulate -with-tower trace events without a Seqera Platform subscription"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",          # required by FastAPI TestClient
]

[project.scripts]
turret = "nextflow_turret.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
