[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nextflow-turret"
version = "0.1.0"
description = "In-process Nextflow Tower API shim — accumulate -with-tower trace events without a Seqera Platform subscription"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
    "tomli>=2.0; python_version < '3.11'",
    "itsdangerous>=2.2.0",
]

[project.optional-dependencies]
oidc = [
    "authlib>=1.0",
    "httpx>=0.24",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",          # required by FastAPI TestClient
]

[project.scripts]
turret = "nextflow_turret.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
