[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nextflow-turret"
version = "0.1.0"
description = "Self-hosted Nextflow Tower replacement — receive -with-tower trace events, track run progress, and launch pipelines without a Seqera Platform subscription"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
keywords = ["nextflow", "bioinformatics", "pipeline", "workflow", "tower", "seqera"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "bcrypt>=4.0",
    "itsdangerous>=2.2.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/msk-mind/nextflow-turret"
Repository = "https://github.com/msk-mind/nextflow-turret"
"Bug Tracker" = "https://github.com/msk-mind/nextflow-turret/issues"

[project.optional-dependencies]
oidc = [
    "authlib>=1.0",
    "httpx>=0.24",
]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
turret = "nextflow_turret.server.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
